# easy-scpi

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  __init__.py  instrument_controller.ipynb  instrument_controller.py  pyproject.toml  scpi_instrument.ipynb  scpi_instrument.py  setup.py
easy_scpi/: README.md  __init__.py  _version.py  scpi_instrument.ipynb  scpi_instrument.py  setup.py
examples/: HMS3010.py
src/easy_scpi/: __about__.py  __init__.py  scpi_instrument.py
tests/: instrument_mock.yaml  test_easy_scpi.py
